# sp1-zkemail

./: README.md
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
script/email-input/: .gitignore  generate-email-inputs.js  package.json
