[package]
version = "0.1.0"
name = "zkemail-program"
edition = "2021"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
num-bigint = "0.4.4"
regex = "1.10.4"
regex-automata = "0.4.8"
rsa = { git = "https://github.com/sp1-patches/RustCrypto-RSA", branch = "patch-rsa-v0.9.6" }
serde = "1.0.200"
sha2 = "0.10.8"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "9e13d02c3310966f50b3e5024821cfd0a5580ede" }



[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "mattstam/patch-v0.10.8" }
