[package]
version = "0.1.0"
name = "zkemail-script"
edition = "2021"
default-run = "zkemail"

[[bin]]
name = "zkemail"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
actix-cors = "0.7.0"
actix-web = "4.5.1"
serde = "1.0.200"
serde_json = "1.0.116"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "9e13d02c3310966f50b3e5024821cfd0a5580ede" }
sp1-prover = { git = "https://github.com/succinctlabs/sp1.git", rev = "9e13d02c3310966f50b3e5024821cfd0a5580ede" }
http = "0.2.12"
tokio = "1.37.0"
bincode = "1.3.3"
sp1-derive = "3.4.0"
regex-automata = "0.4.8"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "9e13d02c3310966f50b3e5024821cfd0a5580ede" }
